After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 661009 - fix debug statements in Glom::DbUtils.layout_field_should_have_navigation()
fix debug statements in Glom::DbUtils.layout_field_should_have_navigation()
Status: RESOLVED FIXED
Product: glom
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Murray Cumming
Murray Cumming
Depends on:
Blocks:
 
 
Reported: 2011-10-05 18:31 UTC by Ben Konrath
Modified: 2011-10-06 10:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
glom-db_utils-fix-debugging-statements.patch (2.06 KB, patch)
2011-10-05 18:33 UTC, Ben Konrath
none Details | Review

Description Ben Konrath 2011-10-05 18:31:57 UTC
Just a small patch to make the commented-out debugging statements more useful in Glom::DbUtils.layout_field_should_have_navigation().
Comment 1 Ben Konrath 2011-10-05 18:33:15 UTC
Created attachment 198363 [details] [review]
glom-db_utils-fix-debugging-statements.patch
Comment 2 Murray Cumming 2011-10-06 06:44:48 UTC
Feel free to make this change, or any similar change.