Fix small bugs in commented-out debugging print statements.

https://bugzilla.gnome.org/show_bug.cgi?id=661009

* glom/libglom/db_utils.cc: Change field to layout_item. Move print
statement to be after the assignment to
field_used_in_relationship_to_one.